[package]
name = "red"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
crop = "0.2.0"
itertools = "0.10.5"
serde = { version = "1.0.159", features = ["derive"] }
termwiz = { version = "0.20.0", features = ["serde"] }
sanguine = { git = "https://github.com/willothy/sanguine" }
